--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,15 @@
 
 <body class="bg-dark">
 
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-sm">
+      <a class="navbar-brand fw-bold">Restaurant List</a>
+      <form class="d-flex">
+        <button class="btn btn-outline-secondary" type="submit">Create</button>
+      </form>
+    </div>
+  </nav>
+
   <main>
     {{{ body }}}
   </main>
