--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,11 +27,12 @@
 
   <div class="container d-flex flex-wrap justify-content-between">
 
+    {{#each restaurant }}
+
     <div class="card mb-5" style="width: 22rem;">
-      <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg" class="card-img-top"
-        alt="restaurant-image">
+      <img src="{{this.image}}" class="card-img-top" alt="restaurant-image" style="height: 18rem;">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">restaurant name</li>
+        <li class="list-group-item">{{this.name}}</li>
       </ul>
       <div class="card-body d-flex justify-content-end align-items-center">
         <a href="#" class="card-link">Edit</a>
@@ -40,44 +41,7 @@
       </div>
     </div>
 
-    <div class="card mb-5" style="width: 22rem;">
-      <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg" class="card-img-top"
-        alt="restaurant-image">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">restaurant name</li>
-      </ul>
-      <div class="card-body d-flex justify-content-end align-items-center">
-        <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Detail</a>
-        <button class="btn btn-outline-secondary mx-3">Delete</button>
-      </div>
-    </div>
-
-    <div class="card mb-5" style="width: 22rem;">
-      <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg" class="card-img-top"
-        alt="restaurant-image">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">restaurant name</li>
-      </ul>
-      <div class="card-body d-flex justify-content-end align-items-center">
-        <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Detail</a>
-        <button class="btn btn-outline-secondary mx-3">Delete</button>
-      </div>
-    </div>
-
-    <div class="card mb-5" style="width: 22rem;">
-      <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg" class="card-img-top"
-        alt="restaurant-image">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">restaurant name</li>
-      </ul>
-      <div class="card-body d-flex justify-content-end align-items-center">
-        <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Detail</a>
-        <button class="btn btn-outline-secondary mx-3">Delete</button>
-      </div>
-    </div>
+    {{/each}}
 
   </div>
 
