--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,6 +8,8 @@
   <title>Restaurant</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body class="bg-dark">
@@ -15,7 +17,7 @@
   <nav class="navbar navbar-light bg-light">
     <div class="container-sm">
       <a class="navbar-brand fw-bold">Restaurant List</a>
-      <form class="d-flex">
+      <form class="d-flex" action="/restaurant/new">
         <button class="btn btn-outline-secondary" type="submit">Create</button>
       </form>
     </div>
