--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
       </ul>
       <div class="card-body d-flex justify-content-end align-items-center">
         <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Detail</a>
+        <a href="/restaurant/{{this._id}}" class="card-link">Detail</a>
         <button class="btn btn-outline-secondary mx-3">Delete</button>
       </div>
     </div>
