--- a/views/new.hbs
+++ b/views/new.hbs
@@ -14,6 +14,12 @@
       <input type="text" class="form-control" name="name_en" id="name_en">
     </div>
 
+    {{!-- 排名 --}}
+    <div class="mb-3">
+      <label for="rating" class="form-label">評價星數</label>
+      <input type="number" class="form-control" name="rating" id="rating" min="1" max="5" step="0.1">
+    </div>
+
     {{!-- 類別 --}}
     <div class="mb-3">
       <label for="category">類別</label>
