--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,7 @@
         <li class="list-group-item">{{this.name}}</li>
       </ul>
       <div class="card-body d-flex justify-content-end align-items-center">
-        <a href="#" class="card-link">Edit</a>
+        <a href="/restaurant/{{this._id}}/edit" class="card-link">Edit</a>
         <a href="/restaurant/{{this._id}}" class="card-link">Detail</a>
         <button class="btn btn-outline-secondary mx-3">Delete</button>
       </div>
