--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
 <div class="container d-flex p-2 mt-5 justify-content-between flex-wrap">
 
-  <div class="container d-flex p-2 mt-5 justify-content-between">
+  <div class="container d-flex p-2 mt-5 justify-content-between ">
 
     {{!-- search bar --}}
     <form action="/search" class="d-flex">
-      <div class="input-group mb-3 d-flex">
+      <div class="input-group mb-3 d-flex h-25">
         <input type="text" class="form-control" placeholder="restaurant's name..." aria-label="restaurant's name"
           aria-describedby="restaurant's name" name="keyword" value="">
         <div class="input-group-append">
@@ -14,16 +14,29 @@
     </form>
 
 
-    {{!-- sort input --}}
-    <div class="input-group mb-3 w-25">
-      <select class="form-select" id="sort">
-        <option selected>sort</option>
-        <option value="asc">A -> Z</option>
-        <option value="desc">Z -> A</option>
-        <option value="category">類別</option>
-        <option value="location">地區</option>
-      </select>
+    <div>
+
+      {{!-- sort input --}}
+      <form action="/restaurant" method="get" class="d-flex">
+        <div class="input-group mb-1">
+          <select class="form-select" id="sort" name="sort">
+            <option selected>sort</option>
+            <option value="A -> Z">A -> Z</option>
+            <option value="Z -> A">Z -> A</option>
+            <option value="category">類別</option>
+            <option value="location">地區</option>
+          </select>
+        </div>
+        <div class="input-group-append">
+          <button class="btn btn-light" type="submit" id="sort-button"><i class="fas fa-search"></i></button>
+        </div>
+      </form>
+      {{#if sort}}
+      <p style="color: rgba(240, 255, 255, 0.646);" class="mx-2">sort by {{ sort }}</p>
+      {{/if}}
     </div>
+
+
 
   </div>
 
