--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -30,7 +30,7 @@
     <div class="card-body d-flex justify-content-end align-items-center">
       <a href="/" class="card-link">Back</a>
       <a href="/restaurant/{{ restaurant._id }}/edit" class="card-link">Edit</a>
-      <form action="/restaurant/{{ restaurant._id }}/delete" method="POST">
+      <form action="/restaurant/{{ restaurant._id }}?_method=DELETE" method="POST">
         <button class="btn btn-outline-secondary mx-3">Delete</button>
       </form>
     </div>
