refactor: modify express routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
     <div>
 
       {{!-- sort input --}}
-      <form action="/restaurant" method="get" class="d-flex">
+      <form action="/" method="get" class="d-flex">
         <div class="input-group mb-1">
           <select class="form-select" id="sort" name="sort">
             <option selected>sort</option>
