add search function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     <form action="/search" class="d-flex">
       <div class="input-group mb-3 d-flex h-25">
         <input type="text" class="form-control" placeholder="restaurant's name..." aria-label="restaurant's name"
-          aria-describedby="restaurant's name" name="keyword" value="">
+          aria-describedby="restaurant's name" name="keyword" value="{{ keyword }}">
         <div class="input-group-append">
           <button class="btn btn-light" type="submit" id="search-button"><i class="fas fa-search"></i></button>
         </div>
