--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,21 @@
-<h1 class="text-light">Login</h1>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body p-3" style="background-color: rgb(231, 233, 235);">
+      <h1 class="text-center m-3">Login</h1>
+      <form action="/users/login" method="POST" class="d-flex flex-column justify-content-center p-4">
+        <div class="form-group mb-3">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email">
+        </div>
+        <div class="form-group mb-5">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
+        </div>
+        <button type="submit" class="btn btn-secondary btn-block mb-0">Login</button>
+      </form>
+      <p class="ms-4 mt-0 p-0">
+        No Account? <a href="/users/register" style="color: chocolate;">Register</a>
+      </p>
+    </div>
+  </div>
+</div>
