--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,35 @@
-<p class="text-light">register</p>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body p-3" style="background-color: rgb(231, 233, 235);">
+      <h1 class="text-center m-3">Register</h1>
+      <p class="ms-4 mb-0"><i class="fas fa-check" style="font-size: 0.1em;color:rgb(164, 164, 164)"></i> 欄位必填</p>
+      <form action="/users/register" method="POST" class="d-flex flex-column justify-content-center p-4">
+        <div class="form-group mb-4">
+          <label for="name" class="mb-1">Name</label>
+          <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name">
+        </div>
+        <div class="form-group mb-4">
+          <label for="email" class="mb-1">Email <i class="fas fa-check"
+              style="font-size: 0.1em;color:rgb(164, 164, 164)"></i></label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" required>
+        </div>
+        <div class="form-group mb-4">
+          <label for="password" class="mb-1">Password <i class="fas fa-check"
+              style="font-size: 0.1em;color:rgb(164, 164, 164)"></i></label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password"
+            required>
+        </div>
+        <div class="form-group mb-5">
+          <label for="confirmPassword" class="mb-1">Confirm Password <i class="fas fa-check"
+              style="font-size: 0.1em;color:rgb(164, 164, 164)"></i></label>
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
+            placeholder="Enter Password" required>
+        </div>
+        <button type="submit" class="btn btn-secondary btn-block mb-0">Register</button>
+      </form>
+      <p class="ms-4 mt-0 p-0">
+        No Account? <a href="/users/login" style="color: chocolate;">Login</a>
+      </p>
+    </div>
+  </div>
+</div>
