feat: add user login feature via passport

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-light bg-light">
     <div class="container-sm">
-      <a class="navbar-brand fw-bold">Restaurant List</a>
+      <a class="navbar-brand fw-bold" href="/">Restaurant List</a>
       <form class="d-flex" action="/restaurant/new">
         <button class="btn btn-outline-secondary" type="submit">Create</button>
       </form>
