--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,6 +3,7 @@
     <div class="card card-body p-3" style="background-color: rgb(231, 233, 235);">
       <h1 class="text-center m-3">Login</h1>
       <form action="/users/login" method="POST" class="d-flex flex-column justify-content-center p-4">
+        {{> message }}
         <div class="form-group mb-3">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email">
