feat: add facebook login & env

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -28,6 +28,8 @@
             placeholder="Enter Password" value="{{ confirmPassword }}">
         </div>
         <button type="submit" class="btn btn-secondary btn-block mb-0">Register</button>
+        <a href="/auth/facebook" class="mt-3 btn btn-block btn-outline-secondary">Facebook Login</a>
+      </form>
       </form>
       <p class="ms-4 mt-0 p-0">
         No Account? <a href="/users/login" style="color: chocolate;">Login</a>
