--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,6 +13,8 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
         </div>
         <button type="submit" class="btn btn-secondary btn-block mb-0">Login</button>
+        <a href="/auth/facebook" class="mt-3 btn btn-block btn-outline-secondary">Facebook Login</a>
+      </form>
       </form>
       <p class="ms-4 mt-0 p-0">
         No Account? <a href="/users/register" style="color: chocolate;">Register</a>
